--- a/front-next-js-web/app/lang/en.json
+++ b/front-next-js-web/app/lang/en.json
@@ -13,6 +13,6 @@
   "repository_full_name": "Repository full name: {fullName}",
   "repository_stars": "Repository stars: {stars}",
   "wednesday_solutions": "Wednesday Solutions",
-  "you_are_awesome": "You are awesome",
+  "you_are_awesome": "IJAS is awesome",
   "recommended": "Recommended"
 }
